Added a default constructor